# yaws-logger

./: .gitignore  .travis.yml  ChangeLog  Makefile.am  README.md  configure.ac  include.mk  rebar.config  vsn.mk
debian/: changelog  control  copyright  rules
ebin/: Makefile.am  yaws_logger.app.in.in  yaws_logger.appup.in  yaws_syslogger.app.in.in  yaws_syslogger.appup.in
m4/: erlang.m4
priv/: Makefile.am  sys.config
src/: Emakefile.in.in  Makefile.am  lager_yaws_logger_proxy_backend.erl  yaws_customlog.erl  yaws_extended_logger.erl  yaws_logger.app.src  yaws_logger.erl  yaws_logger.hrl  yaws_logger_app.erl  yaws_logger_console.erl  yaws_logger_file.erl  yaws_logger_formatter.erl  yaws_logger_lager.erl  yaws_logger_netutils.erl  yaws_logger_sup.erl  yaws_logger_sysloggerl.erl  yaws_syslogger.erl  yaws_syslogger.hrl  yaws_syslogger_app.erl  yaws_syslogger_netutils.erl  yaws_syslogger_sup.erl
testsuite/: Makefile.am  basic_SUITE.erl  testsuite.hrl
